# estar_home

./: README.md  license.txt  pyproject.toml
estar_home/: hooks.py  modules.txt  patches.txt
estar_home/public/js/: estar_home.js
